# RustAuthorConsole

./: Cargo.toml  config.json
src/: main.rs
src/http/: api_server.rs  handlers.rs
src/models/: alvarium.rs  annotation.rs  reading.rs
src/store/: annotation_store.rs  mod.rs  reading_store.rs
src/streams/: author.rs  backup_loop.rs  message_retriever.rs  mod.rs
