[package]
name = "author-console"
version = "0.1.0"
authors = ["DyrellC <dyrell.chapman@iota.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9", features = ["rt", "rt-multi-thread", "time"] }
tokio-rustls = "0.23.2"
anyhow = { version = "1.0.38", default-features = false }
iota-streams = { git = "https://github.com/DyrellC/streams", branch = "local-pow-dev", features = ["std", "client", "tangle"] }
#iota-streams = { path = "../../products/streams", features = ["std", "client", "tangle"]}
rand = "0.7.3"
hyper = {version = "0.14.6", features = ["full"]}
tls-listener = {version = "0.4.0", features = ["rustls", "hyper-h1"]}
json = "0.12.4"
base64 = "0.13.0"
hex = "0.4.2"
parking_lot = "0.11.2"
mysql = "22.0.0"
futures = "0.3.17"


#iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "iota-1.0" }

serde = {version="1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
sha256 = "1.0.3"